src/test/ui/span/issue-15480.stderr
error: borrowed value does not live long enough
  --> $DIR/issue-15480.rs:14:6
   |
13 |         &3
   |          - temporary value created here
14 |     ];
   |      ^ temporary value dropped here while still borrowed
...
19 | }
   | - temporary value needs to live until here
   |
   = note: consider using a `let` binding to increase its lifetime

error: aborting due to previous error

